# 009---Programa-Plano-de-Corte-

./: .gitignore  Abrir_Monitor.bat  Abrir_Monitor_Com_ID.bat  Abrir_Monitor_Rede_Exemplo.bat  CAMINHO.txt  CMakeLists.txt  CMakeLists.txt.user.bf237e3  COMO_FAZER_FUNCIONAR.txt  GUIA_REDE_COMPARTILHADA.md  GUIA_TECNICO.md  Iniciar_3_Instancias_E_Monitor.bat  Iniciar_CorteDobra.bat  Iniciar_CorteDobra_Com_ID.bat  Iniciar_CorteDobra_Rede_Exemplo.bat  OPERATORS_LOCKS_README.md  ProgramaPlanoCorte.spec  README.md  Testar_Permissoes.bat  active_locks.json  build_exe.py  config.ini  config.rede.maquinas.modelo.ini  config.rede.monitor.modelo.ini  configurar_monitor_remoto.bat  configurar_unc.py  descobrir_caminho_unc.bat  launch.json  main.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitor_app.py  monitor_app_backup.py  monitor_locks.py  package-lock.json  package.json  recent_operators.json  run_simulation.bat  run_stress_test.bat  settings.json  (+5 more)
Public/dados/: dados.xml  dados_2026-03-12_Turno_205619.xml  dados_2026-03-12_Turno_211225.xml  dados_2026-03-12_Turno_211818.xml  dados_2026-03-12_Turno_212225.xml  dados_2026-03-13.xml  dados_2026-03-13_Turno_073442.xml  dados_2026-03-13_Turno_081321.xml  dados_2026-03-13_Turno_083233.xml  dados_2026-03-13_Turno_091331.xml  dados_2026-03-25.xml  dados_stress.xml  dados_test.xml  dados_test_backup.xml
Public/saidas_a_cortar/: E003_S01.cnc  P001_S01.cnc
Public/saidas_cnc/: A1821_S01.cnc  A2132_S.cnc  A2133_S.cnc  A2135_S.cnc  E131_S05.cnc  E131_S06.cnc  P580_S.cnc
Public/saidas_cortadas/: A001_S02.cnc
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_mingw/.cmake/api/v1/reply/: cache-v2-28a1d20f59c269dddebd.json  cache-v2-8f1aa1ebe681b49c9c88.json  cache-v2-b62694a74ca36926d147.json  cmakeFiles-v1-3f19bf62b7abb191de36.json  cmakeFiles-v1-5ea82c96dad65d82f914.json  cmakeFiles-v1-f64aa223a5a0f573593f.json  codemodel-v2-19f1b235559c9ae16a5c.json  codemodel-v2-8e5002431efa0a7b2649.json  codemodel-v2-95f33a10f21b873a40cc.json  codemodel-v2-d6652a10d62bbb633aec.json  directory-.-Debug-8c704f7466dbcaaf06f2.json  (+153 more)
build_mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_mingw/ControleCorteDobra_autogen/: deps
build_mingw/ControleCorteDobra_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build_mingw/ControleCorteDobra_autogen/include/: ui_mainwindow.h
core/: application_service.py  config.py  database.py  file_ops.py  file_search_service.py  locks.py  logging_service.py  monitor_service.py  operation_service.py  operators.py  search.py  sync.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/lib/: tauri.ts
gui/: action_panel.py  app_window.py  config_dialog.py  form_panel.py  history_panel.py
release/: RUN.bat
scripts/: simulate_search.ps1
src-tauri/: .env  .env.example  Cargo.toml  README.md  output.txt  output2.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: file_commands.rs  health_commands.rs  mod.rs  operation_commands.rs  system.rs
src-tauri/src/db/: connection.rs  models.rs
src-tauri/src/services/: config_service.rs  file_service.rs  health_service.rs  mod.rs  monitor_service.rs  operation_service.rs
src-tauri/target-cli/: .rustc_info.json
tests/: __init__.py  test_config.py  test_database.py  test_file_ops.py  test_locks.py  test_operators.py  test_search.py
(+38 files in other folders)
